removed entityProfiles from config