@@ -27,7 +27,6 @@ import org.thingsboard.server.common.data.EntityType;
 import org.thingsboard.server.common.data.cf.CalculatedField;
 import org.thingsboard.server.common.data.cf.CalculatedFieldLink;
 import org.thingsboard.server.common.data.cf.configuration.CalculatedFieldConfiguration;
-import org.thingsboard.server.common.data.cf.configuration.aggregation.CfAggTrigger;
 import org.thingsboard.server.common.data.cf.configuration.aggregation.LatestValuesAggregationCalculatedFieldConfiguration;
 import org.thingsboard.server.common.data.id.AssetId;
 import org.thingsboard.server.common.data.id.CalculatedFieldId;
@@ -43,8 +42,6 @@ import org.thingsboard.server.service.profile.TbDeviceProfileCache;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
-import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
@@ -52,7 +49,6 @@ import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -73,7 +69,7 @@ public class DefaultCalculatedFieldCache implements CalculatedFieldCache {
     private final ConcurrentMap<CalculatedFieldId, List<CalculatedFieldLink>> calculatedFieldLinks = new ConcurrentHashMap<>();
     private final ConcurrentMap<EntityId, List<CalculatedFieldLink>> entityIdCalculatedFieldLinks = new ConcurrentHashMap<>();
     private final ConcurrentMap<CalculatedFieldId, CalculatedFieldCtx> calculatedFieldsCtx = new ConcurrentHashMap<>();
-    private final ConcurrentMap<CalculatedFieldId, CfAggTrigger> cfTriggers = new ConcurrentHashMap<>();
+    private final ConcurrentMap<CalculatedFieldId, CalculatedField> aggCalculatedFields = new ConcurrentHashMap<>();
 
     private final ConcurrentMap<EntityId, Set<EntityId>> ownerEntities = new ConcurrentHashMap<>();
 
@@ -87,8 +83,8 @@ public class DefaultCalculatedFieldCache implements CalculatedFieldCache {
         cfs.forEach(cf -> {
             if (cf != null) {
                 calculatedFields.putIfAbsent(cf.getId(), cf);
-                if (cf.getConfiguration() instanceof LatestValuesAggregationCalculatedFieldConfiguration aggConfig) {
-                    cfTriggers.put(cf.getId(), aggConfig.buildTrigger());
+                if (cf.getConfiguration() instanceof LatestValuesAggregationCalculatedFieldConfiguration) {
+                    aggCalculatedFields.put(cf.getId(), cf);
                 }
             }
         });
@@ -156,13 +152,11 @@ public class DefaultCalculatedFieldCache implements CalculatedFieldCache {
     }
 
     @Override
-    public List<CalculatedFieldCtx> getCalculatedFieldCtxsByTrigger(EntityId profileId, Predicate<CfAggTrigger> cfAggFilter) {
-        return cfTriggers.entrySet().stream()
-                .filter(entry -> entry.getValue().matches(profileId, cfAggFilter))
-                .map(Map.Entry::getKey)
+    public List<CalculatedFieldCtx> getAggCalculatedFieldCtxsByFilter(Predicate<CalculatedFieldCtx> relatedEntityFilter) {
+        return aggCalculatedFields.keySet().stream()
                 .map(this::getCalculatedFieldCtx)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .filter(relatedEntityFilter)
+                .toList();
     }
 
     @Override
@@ -206,8 +200,8 @@ public class DefaultCalculatedFieldCache implements CalculatedFieldCache {
             entityIdCalculatedFields.computeIfAbsent(cfEntityId, entityId -> new CopyOnWriteArrayList<>()).add(calculatedField);
 
             CalculatedFieldConfiguration configuration = calculatedField.getConfiguration();
-            if (configuration instanceof LatestValuesAggregationCalculatedFieldConfiguration aggConfig) {
-                cfTriggers.put(calculatedField.getId(), aggConfig.buildTrigger());
+            if (configuration instanceof LatestValuesAggregationCalculatedFieldConfiguration) {
+                aggCalculatedFields.put(calculatedField.getId(), calculatedField);
             }
             calculatedFieldLinks.put(calculatedFieldId, configuration.buildCalculatedFieldLinks(tenantId, cfEntityId, calculatedFieldId));
 
@@ -240,7 +234,7 @@ public class DefaultCalculatedFieldCache implements CalculatedFieldCache {
         log.debug("[{}] evict calculated field ctx from cache: {}", calculatedFieldId, oldCalculatedField);
         entityIdCalculatedFieldLinks.forEach((entityId, calculatedFieldLinks) -> calculatedFieldLinks.removeIf(link -> link.getCalculatedFieldId().equals(calculatedFieldId)));
         log.debug("[{}] evict calculated field links from cached links by entity id: {}", calculatedFieldId, oldCalculatedField);
-        cfTriggers.remove(calculatedFieldId);
+        aggCalculatedFields.remove(calculatedFieldId);
         log.debug("[{}] evict calculated field from cached triggers: {}", calculatedFieldId, oldCalculatedField);
     }
 
